Fix test paths. Old breaking tests silented.